[project]
name = "weatherapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Shogant",email = "shogantanya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "wikipedia (>=1.4.0,<2.0.0)",
    "streamlit-extras (>=0.7.5,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
